<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sane.router.MainActivity">

    <TextView
        android:id="@+id/routerTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/router_name"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/TableLayout"
        android:layout_width="497dp"
        android:layout_height="665dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/routerTitle"
        app:layout_constraintVertical_bias="0.0" >

        <TextView
            android:id="@+id/TableUITitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorAccentLight"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/table_UI_title"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/AdjacencyTableLayout"
            android:layout_width="match_parent"
            android:layout_height="153dp"
            android:layout_below="@+id/TableUITitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="7dp">

            <TextView
                android:id="@+id/adjacencyTableTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@color/colorAccentLight"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/adjacency_table_title"
                android:textSize="14sp"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/adjacencyTable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccentLight"
                android:layout_below="@+id/adjacencyTableTitle"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ARPTableLayout"
            android:layout_width="match_parent"
            android:layout_height="153dp"
            android:layout_below="@+id/AdjacencyTableLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="7dp">

            <TextView
                android:id="@+id/ARPTableTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@color/colorAccentLight"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/ARP_table_title"
                android:textSize="14sp"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/ARPTable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccentLight"
                android:layout_below="@+id/ARPTableTitle"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RoutingTableLayout"
            android:layout_width="match_parent"
            android:layout_height="153dp"
            android:layout_below="@+id/ARPTableLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="7dp">

            <TextView
                android:id="@+id/routingTableTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@color/colorAccentLight"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/routing_table_title"
                android:textSize="14sp"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/routingTable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccentLight"
                android:layout_below="@+id/routingTableTitle"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ForwardingTableLayout"
            android:layout_width="match_parent"
            android:layout_height="153dp"
            android:layout_below="@+id/RoutingTableLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="7dp">

            <TextView
                android:id="@+id/forwardingTableTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@color/colorAccentLight"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/forwarding_table_title"
                android:textSize="14sp"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/forwardingTable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccentLight"
                android:layout_below="@+id/forwardingTableTitle"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/SnifferLayout"
        android:layout_width="735dp"
        android:layout_height="665dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/TableLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/routerTitle"
        app:layout_constraintVertical_bias="0.485">

        <TextView
            android:id="@+id/snifferUITitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorAccentLight"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/sniffer_UI_title"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/packetList"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/snifferUITitle"
            android:layout_marginTop="7dp"
            android:background="@color/colorAccentLight" />

        <TextView
            android:id="@+id/protocolDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/packetList"
            android:layout_marginTop="7dp"
            android:background="@color/colorAccentLight"
            android:gravity="center"
            android:padding="2dp"
            android:text="protocol description here"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/hexDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/protocolDescription"
            android:layout_marginTop="7dp"
            android:background="@color/colorAccentLight"
            android:gravity="center"
            android:padding="2dp"
            android:text="hex and ASCI dump here"
            android:textSize="14sp" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
